[gd_scene load_steps=5 format=3 uid="uid://p52chojtyqbb"]

[ext_resource type="Script" path="res://change_password.gd" id="1_q0eh7"]
[ext_resource type="Texture2D" uid="uid://dr36u3f75w23x" path="res://images and assets/word_bg-1.png" id="2_spy75"]
[ext_resource type="Texture2D" uid="uid://cwnp6qumls3jw" path="res://images and assets/simpleBox.png" id="3_7xg8i"]
[ext_resource type="Theme" uid="uid://bjj27hnebf7xb" path="res://materials/wordzardryTheme.tres" id="3_exa38"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0eh7")

[node name="bg" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spy75")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="simpleBox" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(388.125, 308.027)
scale = Vector2(0.383973, 0.473942)
texture = ExtResource("3_7xg8i")

[node name="info" type="Label" parent="Control/simpleBox"]
offset_left = -607.139
offset_top = -339.761
offset_right = -69.139
offset_bottom = -280.761
theme_override_font_sizes/font_size = 40
text = "Please enter your username"

[node name="email" type="Label" parent="Control/simpleBox"]
texture_filter = 1
offset_left = -523.8
offset_top = -84.4558
offset_right = -325.8
offset_bottom = -10.4558
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
text = "Username"

[node name="password" type="Label" parent="Control/simpleBox"]
visible = false
texture_filter = 1
offset_left = -523.8
offset_top = -168.854
offset_right = -338.8
offset_bottom = -113.854
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
text = "Password"

[node name="confirmPassword" type="Label" parent="Control/simpleBox"]
visible = false
texture_filter = 1
offset_left = -523.8
offset_top = -23.2669
offset_right = -241.8
offset_bottom = 31.7331
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
text = "New Password"

[node name="emailTxt" type="LineEdit" parent="Control/simpleBox"]
texture_filter = 1
offset_left = -177.421
offset_top = -84.4557
offset_right = 507.579
offset_bottom = -29.4557
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40

[node name="passwordTxt" type="LineEdit" parent="Control/simpleBox"]
visible = false
texture_filter = 1
offset_left = -177.421
offset_top = -168.854
offset_right = 506.579
offset_bottom = -113.854
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
secret = true

[node name="confirmPasswordTxt" type="LineEdit" parent="Control/simpleBox"]
visible = false
texture_filter = 1
offset_left = -177.0
offset_top = -23.0
offset_right = 508.0
offset_bottom = 32.0
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
max_length = 20
secret = true

[node name="confirmButton" type="Button" parent="Control/simpleBox"]
texture_filter = 1
offset_left = -213.882
offset_top = 179.29
offset_right = 195.118
offset_bottom = 266.29
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
text = "CONFIRM"

[node name="changePasswordButton" type="Button" parent="Control/simpleBox"]
texture_filter = 1
offset_left = -214.0
offset_top = 179.0
offset_right = 195.0
offset_bottom = 266.0
theme = ExtResource("3_exa38")
theme_override_font_sizes/font_size = 40
text = "CHANGE PASSWORD"

[node name="messageLabel" type="Label" parent="Control/simpleBox"]
offset_left = -177.421
offset_top = -255.363
offset_right = 30.5787
offset_bottom = -200.363
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="backButton" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 22.0
offset_right = 142.0
offset_bottom = 59.0
scale = Vector2(1, 0.997794)
theme = ExtResource("3_exa38")
text = "BACK"

[connection signal="pressed" from="Control/simpleBox/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Control/simpleBox/changePasswordButton" to="." method="_on_change_password_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
